--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Welcome Slider
 ==================================== -->
 
 	<section class="hero-area overlay era-bg-img"
-		style="background-image: url('images/backgrounds/1.jpg');">
+		style="background-image: url('images/backgrounds/2.jpg');">
 		<div style="width: 100%" class="block">
 			<div class="video-button mb-5">
 				<a class="popup-video" href="https://www.youtube.com/watch?v=kKaaVMBesek">
@@ -239,9 +239,9 @@ End Sticky Navigation
 				<!-- first count item -->
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInDown" data-wow-duration="500ms">
 					<div class="counters-item">
-						<i class="tf-ion-android-alert"></i>
-						<span class="jsCounter" data-count="16">0</span>
-						<h3>Happy Clients</h3>
+						<ion-icon size = "large" name="people-outline"></ion-icon>
+						<span class="jsCounter" data-count="20">0</span>
+						<h3>Students</h3>
 					</div>
 				</div>
 				<!-- end first count item -->
@@ -250,9 +250,9 @@ End Sticky Navigation
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInDown" data-wow-duration="500ms"
 					data-wow-delay="200ms">
 					<div class="counters-item">
-						<i class="tf-ion-archive"></i>
-						<span class="jsCounter" data-count="565">0</span>
-						<h3>Projects completed</h3>
+						<ion-icon size = "large" name="school-outline"></ion-icon></ion-icon>
+						<span class="jsCounter" data-count="7">0</span>
+						<h3>Majors</h3>
 					</div>
 				</div>
 				<!-- end second count item -->
@@ -261,9 +261,9 @@ End Sticky Navigation
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInDown" data-wow-duration="500ms"
 					data-wow-delay="400ms">
 					<div class="counters-item">
-						<i class="tf-ion-thumbsup"></i>
-						<span class="jsCounter" data-count="95">0</span>
-						<h3>Positive feedback</h3>
+						<ion-icon size = "large" name="sparkles-outline"></ion-icon>
+						<span class="jsCounter" data-count="4">0</span>
+						<h3>Divisions</h3>
 
 					</div>
 				</div>
@@ -273,9 +273,9 @@ End Sticky Navigation
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInDown" data-wow-duration="500ms"
 					data-wow-delay="600ms">
 					<div class="counters-item kill-margin-bottom">
-						<i class="tf-ion-coffee"></i>
-						<span class="jsCounter" data-count="2500">0</span>
-						<h3>Cups of Coffee</h3>
+						<ion-icon size = "large" name="earth-outline"></ion-icon>
+						<span class="jsCounter" data-count="2018">0</span>
+						<h3>Established</h3>
 					</div>
 				</div>
 				<!-- end fourth count item -->
@@ -321,7 +321,6 @@ Start Call To Action
 							<i class="tf-globe"></i>
 						</div>
 						<h3>Enthusiasm</h3>
-						<p>We work in an ever-improving field with breakthroughs and excitement at every turn</p>
 					</div>
 				</article>
 				<!-- End Single Service Item -->
@@ -333,7 +332,6 @@ Start Call To Action
 							<i class="tf-ion-laptop"></i>
 						</div>
 						<h3>Excellence</h3>
-						<p>We always have a mindset to excel and flourish at any challenge thrown at us</p>
 					</div>
 				</article>
 				<!-- End Single Service Item -->
@@ -345,7 +343,6 @@ Start Call To Action
 							<i class="tf-genius"></i>
 						</div>
 						<h3>Eclectic</h3>
-						<p>We are always looking for cutting-edge ideas to learn and draw inspiration</p>
 					</div>
 				</article>
 				<!-- End Single Service Item -->
@@ -357,7 +354,6 @@ Start Call To Action
 							<i class="tf-dial"></i>
 						</div>
 						<h3>Exceptional</h3>
-						<p>We stand apart from our competition with our work ethics, conduct and deliverables</p>
 					</div>
 				</article>
 				<!-- End Single Service Item -->
@@ -369,7 +365,6 @@ Start Call To Action
 							<i class="tf-target3"></i>
 						</div>
 						<h3>Endeavour</h3>
-						<p>We endeavour our goals with persistance and determination and against all odds</p>
 					</div>
 				</article>
 				<!-- End Single Service Item -->
@@ -381,7 +376,6 @@ Start Call To Action
 							<i class="tf-lifesaver"></i>
 						</div>
 						<h3>Evolution</h3>
-						<p>It never ends for us! </p>
 					</div>
 				</article>
 				<!-- End Single Service Item -->
@@ -1395,6 +1389,9 @@ Start Our Team
 	<script src="plugins/wow/wow.min.js"></script>
 	<!-- Custom js -->
 	<script src="js/script.js"></script>
+
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 
