--- a/team.html
+++ b/team.html
@@ -331,7 +331,7 @@ Start Our Team
 				<div class="team-member">
 					<div class="member-photo">
 						<!-- member photo -->
-						<img class="img-fluid" src="images/team/nishi_mehta.jpg" alt="Mohd Umam">
+						<img class="img-fluid" src="images/team/Mohd_Umam.jpg" alt="Mohd Umam">
 						<!-- /member photo -->
 
 						<!-- member social profile -->
